nullaway_error_f07521c4-1ffa-430e-8217-bff07ee44c97.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/CustomPropertyProvider.java:223: error: [NullAway] returning @Nullable expression from method with @NonNull return type
      return defaultValue;
      ^
    (see http://t.uber.com/nullaway )
